// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MARR Components (UI Integration) > should render inline layout when inLine prop is true 1`] = `
<div>
  <div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-introduction-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Introduction (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rl:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module1-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 1 : anatomie du cerveau et imagerie TEP avec Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rm:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module2-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 2 : orientation, affichage des images et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rn:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module3-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 3 : interprétation des images, limites d'utilisation et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:ro:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module4-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 4 : test préliminaires et évaluation finale (autoévaluation ou évaluation avec formateur) (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rp:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-modulecomplementaire-medecin-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module complémentaire (optionnel) : Analyse quantitative des images Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rq:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2023/07/20/vizamyl-modulesupplementaire-medecin-v1-2023-06.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module supplémentaire : Remise à niveau (20/07/2023)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rr:"
        >
          Professionnels
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`MARR Components (UI Integration) > should render the correct MarrNotice content 1`] = `
<div>
  <h3
    class="fr-h6 fr-mb-1w"
  >
    Mesures additionnelles de réduction du risque (MARR)
  </h3>
  <div
    class="fr-text--md fr-mb-1w"
  >
    Consultez les documents ci-dessous pour bien utiliser ce médicament :
  </div>
  <div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-introduction-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Introduction (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r0:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module1-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 1 : anatomie du cerveau et imagerie TEP avec Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r1:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module2-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 2 : orientation, affichage des images et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r2:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module3-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 3 : interprétation des images, limites d'utilisation et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r3:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module4-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 4 : test préliminaires et évaluation finale (autoévaluation ou évaluation avec formateur) (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r4:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-modulecomplementaire-medecin-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module complémentaire (optionnel) : Analyse quantitative des images Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r5:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2023/07/20/vizamyl-modulesupplementaire-medecin-v1-2023-06.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module supplémentaire : Remise à niveau (20/07/2023)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r6:"
        >
          Professionnels
        </p>
      </div>
    </div>
  </div>
  <div>
    <a
      class="fr-icon-arrow-right-line fr-link--icon-left fr-text--sm"
      href="https://ansm.sante.fr/tableau-marr/18f-flutemetamol"
      rel="noopener noreferrer"
      target="_blank"
    >
      En savoir plus sur le site de l'ANSM
    </a>
  </div>
  <div>
    <a
      class="fr-icon-arrow-right-line fr-link--icon-left fr-text--sm"
      href=""
    >
      Voir les documents pour les professionnels de santé
    </a>
  </div>
</div>
`;

exports[`MARR Components (UI Integration) > should render the correct MarrNoticeAdvanced content 1`] = `
<div>
  <h2
    class="fr-h6 fr-mb-1w"
  >
    Mesures additionnelles de réduction du risque (MARR)
  </h2>
  <div
    class="fr-mb-1w"
  >
    Voici l'ensemble des documents de mesure additionnelle de réduction du risque mis à disposition par le(s) laboratoire(s) exploitant(s) ce médicament et validés par l'ANSM :
  </div>
  <div
    class="fr-mb-2w"
  >
    <a
      class="fr-icon-arrow-right-line fr-link--icon-left fr-text--sm"
      href="https://ansm.sante.fr/tableau-marr/18f-flutemetamol"
      rel="noopener noreferrer"
      target="_blank"
    >
      En savoir plus sur le site de l'ANSM
    </a>
  </div>
  <div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-introduction-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Introduction (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r7:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module1-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 1 : anatomie du cerveau et imagerie TEP avec Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r8:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module2-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 2 : orientation, affichage des images et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:r9:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module3-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 3 : interprétation des images, limites d'utilisation et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:ra:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module4-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 4 : test préliminaires et évaluation finale (autoévaluation ou évaluation avec formateur) (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rb:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-modulecomplementaire-medecin-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module complémentaire (optionnel) : Analyse quantitative des images Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rc:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB crtxUN"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2023/07/20/vizamyl-modulesupplementaire-medecin-v1-2023-06.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module supplémentaire : Remise à niveau (20/07/2023)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rd:"
        >
          Professionnels
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`MARR Components (UI Integration) > should render the correct list of MARR documents 1`] = `
<div>
  <div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-introduction-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Introduction (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:re:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module1-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 1 : anatomie du cerveau et imagerie TEP avec Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rf:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module2-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 2 : orientation, affichage des images et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rg:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module3-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 3 : interprétation des images, limites d'utilisation et autoévaluation (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rh:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-module4-medecins-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module 4 : test préliminaires et évaluation finale (autoévaluation ou évaluation avec formateur) (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:ri:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2022/11/07/20221107-marr-vizamyl-modulecomplementaire-medecin-v1-2022-10.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module complémentaire (optionnel) : Analyse quantitative des images Vizamyl (07/11/2022)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rj:"
        >
          Professionnels
        </p>
      </div>
    </div>
    <div
      class="sc-FEMpB kuDvAZ"
    >
      <a
        class="fr-text--sm"
        href="https://ansm.sante.fr/uploads/2023/07/20/vizamyl-modulesupplementaire-medecin-v1-2023-06.pdf"
        rel="noopener noreferrer"
        target="_blank"
      >
        Module supplémentaire : Remise à niveau (20/07/2023)
      </a>
      <div
        class="sc-gjcoXW gNpZhT"
      >
        <p
          class="fr-badge fr-badge--no-icon fr-badge--purple-glycine"
          id="fr-badge-:rk:"
        >
          Professionnels
        </p>
      </div>
    </div>
  </div>
</div>
`;
